--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
         <h1><i class="bi bi-tropical-storm"></i></h1>
       </a>
 
-      <ul class="nav col-8 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+<!--      <ul class="nav col-8 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">Logs</a></li>
-      </ul>
+      </ul> -->
 
     </div>
   </div>
