--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h4>Running Server: {{ runningServer }}</h4>
-<br>
-<a href="/stop"><button type="submit" name="serverAddr" class="btn btn-primary">Stop</button></a>
-<br>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Server</th>
-      <th scope="col">Actions</th>
-      <th scope="col">Status</th>
-      <th scope="col">Ping</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for server in servers %}
-    <tr>
-      <td>{{ server[1] }}</td>
-      <td>
-        <form action="/run" method="post">
-          <input id="my_input" type="hidden" name="serverAddr" value="{{ server[1] }}">
-          <button type="submit" name="serverAddr" class="btn btn-primary">Start</button>
-        </form>
-      </td>
-      <td>
-        {% if server[3] == true %}
-        <div><i class="bi bi-heart-fill">Server is up - {{ server[4] }} people online</i></div>
-        {% else %}
-        <div><i class="bi bi-heart-half">Server is down</i></div>
-        {% endif %}
-      </td>
-      <td>{{ server[2] }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    <br><h4>Connected to: {{ runningServer }}</h4>
+    <a href="/stop">
+    <button type="submit" name="serverAddr" class="btn btn-primary">Stop</button>
+</a> <br>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Server</th>
+            <th scope="col">Actions</th>
+            <th scope="col">Status</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for server in servers %}
+            <tr>
+                <td>{{ server[1] }}</td>
+                <td>
+                    <form action="/run" method="post"><input id="my_input" type="hidden" name="serverAddr"
+                                                             value="{{ server[1] }}">
+                        <button type="submit" name="serverAddr" class="btn btn-primary">Start</button>
+                    </form>
+                </td>
+                <td>
+                    {% if server[2] == true %}
+                        <div><i class="bi bi-heart-fill"> Server is up - {{ server[3] }} people online - {{ server[5] }}ms</i></div>
+                        <div>Version {{ server[4] }}</div>
+                    {% else %}
+                        <div><i class="bi bi-heart-half"> Server is down</i></div>
+                    {% endif %}</td>
+            </tr>
+        {% endfor %}
 {% endblock %}
