--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 <td>
                     {% if server[2] == true %}
                         <div><i class="bi bi-heart-fill"> Server is up - {{ server[4] }}</i></div>
-                        <div>{{ server[3] }} people online - {{ server[5] }}ms</div>
+                        <div>{{ server[3] }} online - {{ server[5] }}ms</div>
                     {% else %}
                         <div><i class="bi bi-heart-half"> Server is down</i></div>
                     {% endif %}</td>
