--- a/templates/index.html
+++ b/templates/index.html
@@ -16,19 +16,26 @@
         <tbody>
         {% for server in servers %}
             <tr>
-                <td><b>{{ server[1] }}</b> <br> {{ server[4] }} 
+                <td>
+                    {% if server[2] == true %}
+                    <div><i class="bi bi-heart-fill"><b> {{ server[1] }}</b></i><br>
+					{{ server[4] }}
                     <form action="/run" method="post"><input id="my_input" type="hidden" name="serverAddr"
                                                              value="{{ server[1] }}">
                         <button type="submit" name="serverAddr" class="btn btn-primary">Start</button>
-                    </form>
+                    </form></div>
+                    {% else %}
+                        <div><i class="bi bi-heart-half"><b> {{ server[1] }}</b></i></div>
+                    {% endif %}
+					
 				
 				</td>
                 <td>
                     {% if server[2] == true %}
-                        <div><i class="bi bi-heart-fill"> Server is up</i></div>
+                        <div><i>Server is up</i></div>
                         <div><b>{{ server[3] }}</b> online <b>{{ server[5] }}</b>_ms</div>
                     {% else %}
-                        <div><i class="bi bi-heart-half"> Server is down</i></div>
+                        <div><i>Server is down</i></div>
                     {% endif %}</td>
             </tr>
         {% endfor %}
